[taotao-cloud-project-1263] fix[SupderEntity SuperService SuperController]